proyect almost finish, just missing massive loads on the admin screen, enter and query the final notes in the screen professor and student screens.

--- a/src/main/java/com/mycompany/sistema_de_administracion/administratorScreen.form
+++ b/src/main/java/com/mycompany/sistema_de_administracion/administratorScreen.form
@@ -94,6 +94,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit prof info"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editProfInfoActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="230" y="0" width="120" height="50"/>
@@ -131,6 +134,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit stud. info"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editStudInfoActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="580" y="0" width="130" height="50"/>
@@ -256,6 +262,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit cour."/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editCourseActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="940" y="0" width="110" height="50"/>
